--- a/pom.xml
+++ b/pom.xml
@@ -42,4 +42,19 @@
             <version>2.20.0</version>
         </dependency>
     </dependencies>
+ <build>
+     <plugins>
+             <plugin>
+                 <groupId>org.apache.maven.plugins</groupId>
+                 <artifactId>maven-surefire-plugin</artifactId>
+                 <version>3.2.5</version>
+                 <configuration>
+                     <!-- Suite testng xml file to consider for test execution -->
+                     <suiteXmlFiles>
+                         <suiteXmlFile>testNG.xml</suiteXmlFile>
+                     </suiteXmlFiles>
+                 </configuration>
+             </plugin>
+     </plugins>
+ </build>
 </project>
