--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,13 @@
             <artifactId>log4j-slf4j-impl</artifactId>
             <version>2.20.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.2</version>
+        </dependency>
+
     </dependencies>
  <build>
      <plugins>
