--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <aspectj.version>1.9.21</aspectj.version>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -47,21 +47,57 @@
             <artifactId>hamcrest</artifactId>
             <version>2.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>2.25.0</version>
+        </dependency>
     </dependencies>
  <build>
      <plugins>
-             <plugin>
-                 <groupId>org.apache.maven.plugins</groupId>
-                 <artifactId>maven-surefire-plugin</artifactId>
-                 <version>3.2.5</version>
-                 <configuration>
-                     <!-- Suite testng xml file to consider for test execution -->
-                     <suiteXmlFiles>
-                         <suiteXmlFile>testNG.xml</suiteXmlFile>
-                     </suiteXmlFiles>
-                 </configuration>
-             </plugin>
+         <plugin>
+             <groupId>org.apache.maven.plugins</groupId>
+             <artifactId>maven-compiler-plugin</artifactId>
+             <version>3.8.1</version>
+             <configuration>
+                 <source>17</source>
+                 <target>17</target>
+             </configuration>
+         </plugin>
+         <plugin>
+             <groupId>org.apache.maven.plugins</groupId>
+             <artifactId>maven-surefire-plugin</artifactId>
+             <version>3.2.5</version>
+             <configuration>
+                 <argLine>-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"</argLine>
+                 <systemProperties>
+                     <property>
+                         <name>allure.results.directory</name>
+                         <value>${project.build.directory}/allure-results</value>
+                     </property>
+                 </systemProperties>
+                 <suiteXmlFiles>
+                     <suiteXmlFile>
+                         testNG.xml
+                     </suiteXmlFile>
+                 </suiteXmlFiles>
+             </configuration>
+             <dependencies>
+                 <dependency>
+                     <groupId>org.aspectj</groupId>
+                     <artifactId>aspectjweaver</artifactId>
+                     <version>${aspectj.version}</version>
+                 </dependency>
+             </dependencies>
+         </plugin>
+         <plugin>
+             <groupId>io.qameta.allure</groupId>
+             <artifactId>allure-maven</artifactId>
+             <version>2.10.0</version>
+             <configuration>
+                 <reportVersion>2.10.0</reportVersion>
+             </configuration>
+         </plugin>
      </plugins>
  </build>
 </project>
